--- a/public/global.css
+++ b/public/global.css
@@ -9,11 +9,12 @@ body {
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: Ubuntu, avenir next, avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
-	color: rgb(0,100,200);
+  color: #333;
+  font-weight: 700;
 	text-decoration: none;
 }
 
@@ -22,7 +23,7 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: #666;
 }
 
 label {
@@ -48,9 +49,21 @@ input[type="range"] {
 }
 
 button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
+  color: #666;
+  font-size: 1em;
+  cursor: pointer;
+  background-color: #fff;
+  padding-top: 0.5em;
+  border-radius: 1.2em;
+  border-width: 2px;
+  border-color: #666;
+  border-style: solid;
+  min-width: 44px;
+  padding-bottom: 0.5em;
+  padding-left: 1em;
+  padding-right: 1em;
+  margin-bottom: 1em;
+  pointer-events: initial;
 }
 
 button:disabled {
